--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-## Data files
-
-*.mat
 
 #################
 ## Eclipse
@@ -47,6 +44,8 @@ local.properties
 analysis/data/*.csv
 
 # Build results
+
+analysis/data/*.mat
 
 [Dd]ebug/
 [Rr]elease/
